# mo-de

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 20240117000000_init.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/api/: handlers.rs  mod.rs  routes.rs
backend/src/bot/: decision.rs  mod.rs  strategies.rs
backend/src/db/: mod.rs  pool.rs
backend/src/game/: bankruptcy.rs  board.rs  engine.rs  events.rs  mod.rs  state.rs  trade.rs
backend/src/ws/: hub.rs  mod.rs
docs/: task.md  walkthrough.md
frontend/: package-lock.json  package.json
frontend/src/: theme.ts  types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/room/[roomId]/: page.tsx
frontend/src/components/: Providers.tsx
frontend/src/components/Board/: GameBoard.tsx  PropertyCard.tsx  Tile.tsx
frontend/src/components/Game/: AuctionModal.tsx  DiceDisplay.tsx  EventLog.tsx  GameControls.tsx  PlayerList.tsx
frontend/src/stores/: gameStore.ts  wsStore.ts
frontend/src/utils/: api.ts  boardData.ts
